Bug#34210: Perform commit at end of restore. (Restore should be a transaction by itself.)